--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "portfinder": "^1.0.23",
     "script-loader": "^0.7.2",
     "vue": "^2.6.10",
+    "vue-amap": "^0.5.10",
     "vue-axios": "^2.1.2",
     "vue-i18n": "^8.7.0",
     "vue-router": "^3.0.1",
